objects/PC_eLetter__c.object
<CustomObject>
    <fields>
        <fullName>ACLS_Document_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores a reference to the Document Template available as part of the Docgen package</description>
        <label>Document Template</label>
        <referenceTo>DocumentTemplate</referenceTo>
        <relationshipLabel>eLetters (Document Template)</relationshipLabel>
        <relationshipName>eLetter_Document_Template</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACLS_Fax_Cover_Page_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores a reference to the Fax Cover Page Document Template available as part of the Docgen package</description>
        <label>Fax Cover Page Template</label>
        <referenceTo>DocumentTemplate</referenceTo>
        <relationshipLabel>eLetters (Fax Cover Page Template)</relationshipLabel>
        <relationshipName>eLetter_CoverPage_Template</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACLS_Number_of_Pages__c</fullName>
        <label>Number of Pages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Subject__c</fullName>
        <description>Subject for the eLetter Communication being sent out</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_AllowExternalRecipients__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow sending of email to any recipient irrespective of whether they are configured in Target Recipients or Pre-Configured Recipients(in the related Engagement Program Eletter record).</description>
        <inlineHelpText>Allow sending of email to any recipient irrespective of whether they are configured in Target Recipients or Pre-Configured Recipients(in the related Engagement Program Eletter record).</inlineHelpText>
        <label>Allow Additional Recipients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Allow_Send_to_Patient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selecting this field allows the eLetter to be sent to the patients.</description>
        <label>Allow Send to Patient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Category__c</fullName>
        <description>Defines the category of the eLetter. i.e whether the eLetter is used for Email, Fax or Automated Email.</description>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Automated Email</fullName>
                </value>
                <value>
                    <fullName>Automated Fax</fullName>
                </value>
                <value>
                    <fullName>Automated SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Communication_Language__c</fullName>
        <description>The eLetter can be produced in these languages.</description>
        <inlineHelpText>Select supported languages for this eLetter</inlineHelpText>
        <label>Communication Language</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Description__c</fullName>
        <inlineHelpText>Description of the eLetter Template</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Hide_From_eLetter_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selecting this will hide this eLetter on eLetter management page.</description>
        <inlineHelpText>Selecting this will hide this eLetter on eLetter management page.</inlineHelpText>
        <label>Hide From eLetter Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Object_Record_Types__c</fullName>
        <description>Case types with which the eLetter is associated.</description>
        <label>Object Record Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>PC_Source_Object__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BI / BV</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Private Coverage</fullName>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>Prior Authorization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Send_to_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this flag is checked, all other flags (Send Fax,Send email) are automatically unchecked and the eLetter is sent to the current User (for editing before sending to the Patients/Recipients)</description>
        <inlineHelpText>If Selected, the eLetter will be sent to current logged in User.</inlineHelpText>
        <label>Send to User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Source_Object__c</fullName>
        <description>The objects with which the eLetter is associated.</description>
        <label>Source Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Program Coverage</fullName>
                </value>
                <value>
                    <fullName>Interaction</fullName>
                </value>
                <value>
                    <fullName>Adverse Event</fullName>
                </value>
                <value>
                    <fullName>Adverse Event 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Target_Recipients__c</fullName>
        <description>Selects the target recipients for the eLetter.</description>
        <label>Target Recipients</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Association_Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Template_Name__c</fullName>
        <description>API name for email template.</description>
        <inlineHelpText>Email Template Developer Name</inlineHelpText>
        <label>PC Template Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>eLetter</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>eLetter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>eLetters</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>